--- a/About Us.html
+++ b/About Us.html
@@ -86,7 +86,7 @@
     <!-- Page Header Start -->
     <header class="text-white py-5" style="background-image: url('Img/pexels-pixabay-325876.png'); background-size: cover; background-position: center center; height: 500px;">
         <div class="container text-center">
-            <h1 class="display-4 mb-4" style="margin-top:150px ;">Welcome to Estatic Cleaners</h1>
+            <h1 class="display-4 mb-4" style="margin-top:150px ;">Welcome to Ecstatic Cleaners</h1>
             <p>Your Trusted Partner for Exceptional Cleaning Services</p>
             <!-- <a href="contact.html" class="btn btn-light mt-3">Get Started</a> -->
         </div>
