--- a/Carpets and Rugs.html
+++ b/Carpets and Rugs.html
@@ -81,7 +81,7 @@
     <!-- Showcase Banner -->
      <header class="text-white py-5" style="background-image: url('Img/trang-nguyen-drke6MEs8Gg-unsplash.jpg'); background-size: cover; background-position: center center; height: 600px;">
         <div class="container text-center">
-            <h1 class="display-4 mb-4" style="margin-top:150px ;">Welcome to Estatic Cleaners</h1>
+            <h1 class="display-4 mb-4" style="margin-top:150px ;">Welcome to Ecstatic Cleaners</h1>
             <p>Your Trusted Partner for Exceptional Cleaning Services</p>
         </div>
     </header>
@@ -171,7 +171,7 @@
                             <i class="fas fa-phone-alt mr-2"></i> +234 809 303 9272, +234 904 404 270
                         </li>
                         <li class="list-group-item">
-                            <i class="fas fa-envelope mr-2"></i> info@estaticcleaners.com
+                            <i class="fas fa-envelope mr-2"></i> info@ecstaticcleaners.com
                         </li>
                     </ul>
                 </div>
