--- a/Dry Cleaning.html
+++ b/Dry Cleaning.html
@@ -81,7 +81,7 @@
     <!-- Showcase Banner -->
     <header class="text-white py-5" style="background-image: url('Img/waldemar-Db4d6MRIXJc-unsplash.jpg'); background-size: cover; background-position: center center; height: 600px;">
         <div class="container text-center">
-            <h1 class="display-4 mb-4" style="margin-top: 150px;">Welcome to Estatic Cleaners</h1>
+            <h1 class="display-4 mb-4" style="margin-top: 150px;">Welcome to Ecstatic Cleaners</h1>
             <p>Your Trusted Partner for Exceptional Cleaning Services</p>
         </div>
     </header>
@@ -175,24 +175,22 @@
                 </div>
             </a>
         </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+            <a href="Price List.html" style="text-decoration: none;">
+                <div class="card image-card" style="background-image: url('Img/mila-albrecht-VUu9rAmb9R0-unsplash.png'); background-position: center; background-size: 400px;">
+                    <div class="card-body" style="margin-top: 150px;">
+                        <h3 class="card-title text-light">Curtains</h3>
+                        <!-- <p class="card-text">Description of Service 1. Lorem ipsum dolor sit.</p> -->
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
+    
     
     </section>
 
 <!-- Sevices End -->
-
-
-
-
-    <!-- Footer Section -->
-    <div id="contact" class="bg-dark text-white py-4" style="height: 250px;">
-        <div class="container text-center">
-            <h2>Contact Us</h2>
-            <p>If you have any questions or inquiries, feel free to get in touch with us.</p>
-            <a href="tel:+123456789" class="btn btn-light">Call Us</a>
-            <a href="mailto:info@example.com" class="btn btn-light">Email Us</a>
-        </div>
-    </div>
 
 
   <!-- Footer Start -->
