--- a/Fumigation.html
+++ b/Fumigation.html
@@ -79,12 +79,17 @@
 <!-- TopBar Navigation End -->
 
      <!-- Showcase Banner -->
-     <header class="text-white py-5" style="background-image: url('Img/425.jpg'); height: 750px; background-size: 100%; background-position: top center; background-repeat: no-repeat;">
-        <div class="container text-center" style="margin-top: 300px;">
-            <h1 class="display-2">Professional Fumigation Services</h1>
-            <p>Protecting Your Space from Pests and Harmful Microorganisms</p>
+<header class="text-white py-5" style="background-image: url('Img/425.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <div class="container text-center">
+        <div class="row justify-content-center align-items-center" style="min-height: 100vh;">
+            <div class="col-md-8">
+                <h1 class="display-2">Professional Fumigation Services</h1>
+                <p class="lead">Protecting Your Space from Pests and Harmful Microorganisms</p>
+            </div>
         </div>
-    </header>
+    </div>
+</header>
+<!-- Showcase Banner -->
 
     <!-- Fumigation Services Section -->
     <section class="py-5">
@@ -117,7 +122,7 @@
                     <img src="Img/Arizona-Pest-Control-672x372.png" alt="Expertise" class="img-fluid rounded">
                 </div>
                 <div class="col-lg-6">
-                    <h2>Why Choose Estatic Cleaners for Fumigation?</h2>
+                    <h2>Why Choose Ecstatic Cleaners for Fumigation?</h2>
                     <p>We understand the importance of a pest-free environment. Here's why you should choose us:</p>
                     <ul >
                         <li style=" list-style: none; margin-top: 10px;"><i class="fas fa-check-circle text-primary"></i> Experienced and Trained Technicians</li>
@@ -145,7 +150,7 @@
                             <i class="fas fa-phone-alt mr-2"></i> +234 809 303 9272, +234 904 404 270
                         </li>
                         <li class="list-group-item">
-                            <i class="fas fa-envelope mr-2"></i> info@estaticcleaners.com
+                            <i class="fas fa-envelope mr-2"></i> info@ecstaticcleaners.com
                         </li>
                     </ul>
                 </div>
