--- a/Home and Office Cleaning.html
+++ b/Home and Office Cleaning.html
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2 class="font-weight-medium">Your Trusted Office Cleaning Partner</h2>
-                    <p class="">A clean and organized office environment is essential for productivity and employee well-being. At [Your Company Name], we offer top-notch office cleaning services to ensure your workplace remains pristine.</p>
+                    <p class="">A clean and organized office environment is essential for productivity and employee well-being. At Ecstatic Cleaners, we offer top-notch office cleaning services to ensure your workplace remains pristine.</p>
                     <ul>
                         <li>Desk and Workstation Cleaning</li>
                         <li>Floor Care</li>
