--- a/Homepage.html
+++ b/Homepage.html
@@ -46,7 +46,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
         <a class="navbar-brand" href="Homepage.html">
-            <img src="img/logos.png" alt="Logo">
+            <img src="img/logos.png" alt="Logo" class="height:10px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -95,8 +95,8 @@
                     <img class="w-100" src="img/waldemar-Db4d6MRIXJc-unsplash.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center mt-5" >
                         <div class="p-3 mt-5" style="max-width: 900px;">
-                            <h5 class="text-white mb-md-3" style="font-size: 22px;">Elevate Your Style with <span class="text-primary">Estatic Cleaners</span> Where Freshness Meets Perfection</h5>
-                            <h1 class="display-1 text-white mb-md-4 mt-2" style="font-size: 55px;">Premium Laundry Services at Your Doorstep</h1>
+                            <h5 class="text-white mb-md-3" style="font-size: 22px;">Elevate Your Style with <span class="text-primary">Ecstatic Cleaners</span> Where Freshness Meets Perfection</h5>
+                            <h1 class="display-3 text-white mb-md-4 mt-2" style="font-size: 50px;">Premium Laundry Services at Your Doorstep</h1>
                             <a href="About Us.html" class="btn btn-outline-primary py-md-3 px-md-5 mt-2">Learn More....</a>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
         <div class="container p-3">
             <div class="row">
                 <div class="col-md-4 mb-4 mb-lg-0 rounded">
-                    <div class="contact-box bg-secondary text-white p-3 text-center rounded">
+                    <div class="contact-box bg-success text-white p-3 text-center rounded">
                         <i class="fas fa-map-marker-alt fa-2x mb-3"></i>
                         <h5 class="font-weight-light">Our Location</h5>
                         <p class="m-0">9, Akinwunmi street, Alagomeji, Yaba, Lagos.</p>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="contact-box bg-secondary text-white p-3 text-center  rounded">
+                    <div class="contact-box bg-success text-white p-3 text-center  rounded">
                         <i class="fas fa-phone-alt fa-2x mb-3"></i>
                         <h5 class="font-weight-light">Call Us</h5>
                         <p class="m-0">+234 809 303 9272, +234 904 404 0270</p>
@@ -167,15 +167,16 @@
     </div>
     
     <!-- Contact Info End -->
+    
     <!-- Why Choose Us Section -->
     <section class=" container-fluid py-5 mt-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="img/joshua-lewis-RpcebNCu86c-unsplash.png" alt="Expertise" class="img-fluid rounded h-100">
+                    <img src="img/dan-lefebvre-APUvZYCjPJ0-unsplash.png" alt="Expertise" class="img-fluid rounded h-100">
                 </div>
                 <div class="col-lg-6">
-                    <h2 style="line-height: 1.5em;">Why Choose Estatic Cleaners for Your Cleaning Needs?</h2>
+                    <h2 style="line-height: 1.5em;">Why Choose Ecstatic Cleaners for Your Cleaning Needs?</h2>
                     <p class="mb-2" style="text-align: justify; line-height: 1.9em;">Ecstatic Cleaners is a cleaning company based in Lagos, Nigeria. We specialize in Laundromat, Residential, Commercial, and Post-Construction Cleaning services. Our business is registered under the CAMA ACT 2020 as a business name and is owned by SHITTU I. Emmanuel.</p>
                     <ul >
                         <li style=" list-style: none; margin-top: 10px;"><i class="fas fa-check-circle text-primary"></i> Quality Laundry Service</li>
@@ -203,7 +204,7 @@
                                 <div class="card-body text-center">
                                     <img src="img/washing-clothes.gif" alt="" class="img-fluid">
                                     <p class="card-text">Laundry and Dry Cleaning</p>
-                                    <a href="Dry Cleaning.html" class="btn btn-outline-secondary pb-1 mb-1">Learn More</a>
+                                    <a href="Dry Cleaning.html" class="btn btn-outline-primary pb-1 mb-1">Learn More</a>
 
                                 </div>
                             </div>
@@ -213,7 +214,7 @@
                                 <div class="card-body text-center">
                                     <img src="img/housekeeping.gif" alt="" class="img-fluid">
                                     <p class="card-text">Home and Office Keeping</p>
-                                    <a href="Home and Office Cleaning.html" class="btn btn-outline-secondary pb-1 mb-1">Learn More</a>
+                                    <a href="Home and Office Cleaning.html" class="btn btn-outline-primary pb-1 mb-1">Learn More</a>
 
                                 </div>
                             </div>
@@ -223,7 +224,7 @@
                                 <div class="card-body text-center">
                                     <img src="img/wallpaper.gif" alt="" class="img-fluid">
                                     <p class="card-text">Post Construction</p>
-                                    <a href="Post Construction.html" class="btn btn-outline-secondary pb-1 mb-1">Learn More</a>
+                                    <a href="Post Construction.html" class="btn btn-outline-primary pb-1 mb-1">Learn More</a>
 
                                 </div>
                             </div>
@@ -233,7 +234,7 @@
                                 <div class="card-body text-center">
                                     <img src="img/insecticide.gif" alt="" class="img-fluid" >
                                     <p class="card-text">Inspection and Fumigation</p>
-                                    <a href="Fumigation.html" class="btn btn-outline-secondary pb-1 mb-1">Learn More</a>
+                                    <a href="Fumigation.html" class="btn btn-outline-primary pb-1 mb-1">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -256,15 +257,15 @@
                     <p></p>
                     <div class="row">
                         <div class="col-sm-6 mb-4">
-                            <h1 class="text-secondary" data-toggle="counter-up">35</h1>
-                            <h5 class="font-weight-light">Expert Worker</h5>
+                            <h3 class="text" data-toggle="counter-up">35</h3>
+                            <h5 class="font-weight-light">Expert Workers</h5>
                         </div>
                         <div class="col-sm-6 mb-4">
-                            <h1 class="text-secondary" data-toggle="counter-up">1250</h1>
+                            <h3 class="text" data-toggle="counter-up">1250</h3>
                             <h5 class="font-weight-light">Happy Clients</h5>
                         </div>
                         <div class="col-sm-6 mb-4">
-                            <h1 class="text-secondary" data-toggle="counter-up">9550</h1>
+                            <h3 class="text" data-toggle="counter-up">9550</h3>
                             <h5 class="font-weight-light">Dry Cleaning Services Completed</h5>
                         </div>
                     </div>
@@ -327,7 +328,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="bg-light text-center mb-2 pt-4 rounded" style="height: 550px;">
-                        <div class="d-inline-flex flex-column align-items-center justify-content-center bg-secondary rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
+                        <div class="d-inline-flex flex-column align-items-center justify-content-center bg-success rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
                             <h2 class="text-white">Cleaning</h2>
                             <h1 class="display-4 text-white mb-0">
                                 <small class="align-top" style="font-size: 22px; line-height: 45px;"><h3>Negotiable</h3></small><small class="align-bottom" style="font-size: 16px; line-height: 40px;"></small>
@@ -338,7 +339,7 @@
                             <p>Post-Construction-Cleaning    (Negotiable)</p>
                             <p>Fumigation    (Negotiable)</p>
                         </div>
-                        <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-secondary py-2 px-4">Place Order</a>
+                        <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-success py-2 px-4">Place Order</a>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
@@ -359,7 +360,7 @@
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="bg-light text-center mb-2 pt-4 rounded" style="height: 550px;">
-                        <div class="d-inline-flex flex-column align-items-center justify-content-center bg-secondary rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
+                        <div class="d-inline-flex flex-column align-items-center justify-content-center bg-success rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
                             <h5 class="text-white"><b>Rug-Cleaning</b></h5>
                             <h1 class="display-4 text-white mb-0">
                                 <small class="align-top" style="font-size: 22px; line-height: 45px;"><h3>#10k-18k</h3></small><small class="align-bottom" style="font-size: 16px; line-height: 40px;"></small>
@@ -370,7 +371,7 @@
                             <p>Medium     (#14,000)</p>
                             <p>Big       (#18,000)</p>
                         </div>
-                        <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-secondary py-2 px-4">Place Order</a>
+                        <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-success py-2 px-4">Place Order</a>
                     </div>
                 </div>
             </div>
@@ -390,7 +391,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5">Ogundeji Micheal</h5>
                         <p class="text-center font-italic">IT consultant</p>
-                        <p class="m-0">I can't express how impressed I am with Estatic Cleaners. As an IT consultant, I often work from home, and a clean workspace is crucial. They've been maintaining my office space impeccably. The attention to detail and affordability are unmatched. Great job, guys!</p>
+                        <p class="m-0">I can't express how impressed I am with Ecstatic Cleaners. As an IT consultant, I often work from home, and a clean workspace is crucial. They've been maintaining my office space impeccably. The attention to detail and affordability are unmatched. Great job, guys!</p>
                     </div>
                 </div>
                 <div class="testimonial-item">
@@ -398,7 +399,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5"> Fatima Yusuf</h5>
                         <p class="text-center font-italic">Nurse</p>
-                        <p class="m-0 text-center">Estatic Cleaners has been taking care of my laundry and dry-cleaning needs for months now, and I'm extremely satisfied. Being a nurse, I need clean and sanitized uniforms daily. Their services are not just efficient but also hygienic. I trust them completely.</p>
+                        <p class="m-0 text-center">Ecstatic Cleaners has been taking care of my laundry and dry-cleaning needs for months now, and I'm extremely satisfied. Being a nurse, I need clean and sanitized uniforms daily. Their services are not just efficient but also hygienic. I trust them completely.</p>
                     </div>
                 </div>
                 <div class="testimonial-item">
@@ -406,7 +407,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5">Emeka Okonkwo</h5>
                         <p class="text-center font-italic">Business Owner</p>
-                        <p class="m-0">Running a business can be chaotic, and cleanliness is a priority for us. Estatic Cleaners' post-construction cleaning services came to our rescue when we opened our new store. They transformed the space from a dusty mess to a spotless showroom. Kudos to the team!</p>
+                        <p class="m-0">Running a business can be chaotic, and cleanliness is a priority for us. Ecstatic Cleaners' post-construction cleaning services came to our rescue when we opened our new store. They transformed the space from a dusty mess to a spotless showroom. Kudos to the team!</p>
                     </div>
                 </div>
                 <div class="testimonial-item">
@@ -414,7 +415,7 @@
                     <div class="bg-light text-center p-4 pt-0">
                         <h5 class="font-weight-medium mt-5">Amina Ibrahim</h5>
                         <p class="text-center font-italic">Business Owner</p>
-                        <p class="m-0">Estatic Cleaners have been a lifesaver for me! As a busy school teacher, I hardly find time for deep cleaning my home. Their professional cleaning services have made my life so much easier. The team is punctual, thorough, and always leaves my house sparkling. I highly recommend them!</p>
+                        <p class="m-0">Ecstatic Cleaners have been a lifesaver for me! As a busy school teacher, I hardly find time for deep cleaning my home. Their professional cleaning services have made my life so much easier. The team is punctual, thorough, and always leaves my house sparkling. I highly recommend them!</p>
                     </div>
                 </div>
             </div>
