--- a/Post Construction.html
+++ b/Post Construction.html
@@ -98,21 +98,21 @@
         <div class="row" style="margin-top: 100px;">
             <div class="col-md-4">
                 <div class="service-card">
-                    <i class="fas fa-broom"></i>
+                    <i class="text-light-green fas fa-broom"></i>
                     <h3>Deep Cleaning</h3>
                     <p>We perform deep cleaning to remove all construction-related dust and dirt.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="service-card">
-                    <i class="fas fa-window-restore"></i>
+                    <i class="text-light-green fas fa-window-restore"></i>
                     <h3>Window Cleaning</h3>
                     <p>Our team cleans all windows, leaving them spotless and streak-free.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="service-card">
-                    <i class="fas fa-trash-alt"></i>
+                    <i class="text-light-green fas fa-trash-alt"></i>
                     <h3>Debris Removal</h3>
                     <p>We handle the removal of construction debris, ensuring a safe and clean environment.</p>
                 </div>
@@ -131,13 +131,13 @@
                     <p>Reach out to us for a free consultation.</p>
                     <ul class="list-group">
                         <li class="list-group-item mb-3">
-                            <i class="fas fa-map-marker-alt mr-2"></i> 9, Akinwunmi Street, Alagomeji-Yaba, Lagos.
+                            <i class="text-light-green fas fa-map-marker-alt mr-2"></i> 9, Akinwunmi Street, Alagomeji-Yaba, Lagos.
                         </li>
                         <li class="list-group-item mb-3">
-                            <i class="fas fa-phone-alt mr-2"></i> +234 809 303 9272, +234 904 404 270
+                            <i class="text-light-green fas fa-phone-alt mr-2"></i> +234 809 303 9272, +234 904 404 270
                         </li>
                         <li class="list-group-item">
-                            <i class="fas fa-envelope mr-2"></i> info@estaticcleaners.com
+                            <i class="text-light-green fas fa-envelope mr-2"></i> info@estaticcleaners.com
                         </li>
                     </ul>
                 </div>
