--- a/Price List.html
+++ b/Price List.html
@@ -107,67 +107,11 @@
 <!-- Showcase Banner -->
 
 
-  <!-- Pricing Plan Start -->
-  <div class="container-fluid pt-5 pb-3">
-    <div class="container">
-        <h3 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Our Pricing Plan</h3>
-        <h1 class="display-4 text-center mb-5">The Best Price</h1>
-        <div class="row">
-            <div class="col-lg-4 mb-4">
-                <div class="bg-light text-center mb-2 pt-4 rounded" style="height: 550px;">
-                    <div class="d-inline-flex flex-column align-items-center justify-content-center bg-secondary rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
-                        <h2 class="text-white">Cleaning</h2>
-                        <h1 class="display-4 text-white mb-0">
-                            <small class="align-top" style="font-size: 22px; line-height: 45px;"><h3>Negotiable</h3></small><small class="align-bottom" style="font-size: 16px; line-height: 40px;"></small>
-                        </h1>
-                    </div>
-                    <div class="d-flex flex-column align-items-center py-3">
-                        <p>House cleaning and Office Cleaning (Negotiable)</p>
-                        <p>Post-Construction-Cleaning    (Negotiable)</p>
-                        <p>Fumigation    (Negotiable)</p>
-                    </div>
-                    <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-secondary py-2 px-4">Place Order</a>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-4">
-                <div class="bg-light text-center mb-2 pt-4 rounded" style="height: 550px;">
-                    <div class="d-inline-flex flex-column align-items-center justify-content-center bg-primary rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
-                        <h3 class="text-white"><b>Liquid Starch</b></h3>
-                        <h1 class="display-4 text-white mb-0">
-                            <small class="align-top" style="font-size: 22px; line-height: 45px;">#1,200-15k</small><small class="align-bottom" style="font-size: 16px; line-height: 40px;"></small>
-                        </h1>
-                    </div>
-                    <div class="d-flex flex-column align-items-center py-3">
-                        <p>Small size       (#1,200)</p>
-                        <p>Medium size     (#5,500)</p>
-                        <p>Large size      (15,000)</p>
-                    </div>
-                    <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-primary py-2 px-4">Place Order</a>
-                </div>
-            </div>
-            <div class="col-lg-4 mb-4">
-                <div class="bg-light text-center mb-2 pt-4 rounded" style="height: 550px;">
-                    <div class="d-inline-flex flex-column align-items-center justify-content-center bg-secondary rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
-                        <h5 class="text-white"><b>Rug-Cleaning</b></h5>
-                        <h1 class="display-4 text-white mb-0">
-                            <small class="align-top" style="font-size: 22px; line-height: 45px;"><h3>#10k-18k</h3></small><small class="align-bottom" style="font-size: 16px; line-height: 40px;"></small>
-                        </h1>
-                    </div>
-                    <div class="d-flex flex-column align-items-center py-3">
-                        <p>Small     (#10,000)</p>  
-                        <p>Medium     (#14,000)</p>
-                        <p>Big       (#18,000)</p>
-                    </div>
-                    <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-secondary py-2 px-4">Place Order</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Pricing Plan End -->
+  
 
 <div class="table-responsive">
-    <h2 class="text-center mt-lg-5" style="margin-top: 200px; margin-bottom: 50px;" >Price List</h2>
+    <h2 class="text-center mt-lg-5" style="margin-top: 200px; margin-bottom: 25px;" >Price List</h2>
+    <h3 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Our Pricing Plan</h3>
     <table class="table table-striped-columns">
         <thead>
             <tr>
@@ -193,7 +137,7 @@
                     </select>
                 </td>
                 <td>#400</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
@@ -209,7 +153,7 @@
                     </select>
                 </td>
                 <td>#300</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services -->
             <tr>
@@ -226,7 +170,7 @@
                     </select>
                 </td>
                 <td>#600</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services -->
             <tr>
@@ -243,7 +187,7 @@
                     </select>
                 </td>
                 <td>#600</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services -->
             <tr>
@@ -260,7 +204,7 @@
                     </select>
                 </td>
                 <td>#300</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services --><tr>
                 <th scope="row">6</th>
@@ -276,7 +220,7 @@
                     </select>
                 </td>
                 <td>#600</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services -->
             <tr>
@@ -293,7 +237,7 @@
                     </select>
                 </td>
                 <td>#500</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services --><tr>
                 <th scope="row">8</th>
@@ -309,7 +253,7 @@
                     </select>
                 </td>
                 <td>#500</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services -->
             <tr>
@@ -326,7 +270,7 @@
                     </select>
                 </td>
                 <td>#800</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services --><tr>
                 <th scope="row">10</th>
@@ -342,7 +286,7 @@
                     </select>
                 </td>
                 <td>#800</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services --><tr>
                 <th scope="row">11</th>
@@ -358,7 +302,7 @@
                     </select>
                 </td>
                 <td>#1500</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services -->
             <tr>
@@ -375,7 +319,7 @@
                     </select>
                 </td>
                 <td>#2000</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other services -->
         </tbody>
@@ -399,21 +343,21 @@
                 <td>House Cleaning</td>
                 <td>--------------</td>
                 <td>Negotiable</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
                 <td>Office Cleaning</td>
                 <td>--------------</td>
                 <td>Negotiable</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
                 <td>Post-Construction Cleaning</td>
                 <td>--------------</td>
                 <td>Negotiable</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other cleaning services -->
         </tbody>
@@ -436,21 +380,21 @@
                 <td>Small Size</td>
                 <td>--------------</td>
                 <td>#1200</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
                 <td>Medium Size</td>
                 <td>--------------</td>
                 <td>#5,500</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
                 <td>Large Size</td>
                 <td>--------------</td>
                 <td>#15,500</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <!-- Repeat similar rows for other cleaning services -->
         </tbody>
@@ -473,18 +417,78 @@
                 <td>Small</td>
                 <td>--------------</td>
                 <td>#10,000</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
                 <td>Large</td>
                 <td>--------------</td>
                 <td>#18,000</td>
-                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-primary btn-sm w-50 rounded">Order</button></a></td>
+                <td><a href="https://wa.me/message/4PEH5J7XS35QP1"><button type="button" class="btn btn-outline-success btn-sm w-50 rounded">Order</button></a></td>
             </tr>
             
     </table>
 </div>
+
+<!-- Pricing Plan Start -->
+<div class="container-fluid pt-5 pb-3">
+    <div class="container">
+        <h3 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Our Pricing Plan</h3>
+        <h1 class="display-4 text-center mb-5">The Best Price</h1>
+        <div class="row">
+            <div class="col-lg-4 mb-4">
+                <div class="bg-light text-center mb-2 pt-4 rounded" style="height: 550px;">
+                    <div class="d-inline-flex flex-column align-items-center justify-content-center bg-success rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
+                        <h2 class="text-white">Cleaning</h2>
+                        <h1 class="display-4 text-white mb-0">
+                            <small class="align-top" style="font-size: 22px; line-height: 45px;"><h3>Negotiable</h3></small><small class="align-bottom" style="font-size: 16px; line-height: 40px;"></small>
+                        </h1>
+                    </div>
+                    <div class="d-flex flex-column align-items-center py-3">
+                        <p>House cleaning and Office Cleaning (Negotiable)</p>
+                        <p>Post-Construction-Cleaning    (Negotiable)</p>
+                        <p>Fumigation    (Negotiable)</p>
+                    </div>
+                    <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-success py-2 px-4">Place Order</a>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-4">
+                <div class="bg-light text-center mb-2 pt-4 rounded" style="height: 550px;">
+                    <div class="d-inline-flex flex-column align-items-center justify-content-center bg-primary rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
+                        <h3 class="text-white"><b>Liquid Starch</b></h3>
+                        <h1 class="display-4 text-white mb-0">
+                            <small class="align-top" style="font-size: 22px; line-height: 45px;">#1,200-15k</small><small class="align-bottom" style="font-size: 16px; line-height: 40px;"></small>
+                        </h1>
+                    </div>
+                    <div class="d-flex flex-column align-items-center py-3">
+                        <p>Small size       (#1,200)</p>
+                        <p>Medium size     (#5,500)</p>
+                        <p>Large size      (15,000)</p>
+                    </div>
+                    <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-primary py-2 px-4">Place Order</a>
+                </div>
+            </div>
+            <div class="col-lg-4 mb-4">
+                <div class="bg-light text-center mb-2 pt-4 rounded" style="height: 550px;">
+                    <div class="d-inline-flex flex-column align-items-center justify-content-center bg-success rounded-circle shadow mt-2 mb-4" style="width: 200px; height: 200px; border: 15px solid #ffffff;">
+                        <h5 class="text-white"><b>Rug-Cleaning</b></h5>
+                        <h1 class="display-4 text-white mb-0">
+                            <small class="align-top" style="font-size: 22px; line-height: 45px;"><h3>#10k-18k</h3></small><small class="align-bottom" style="font-size: 16px; line-height: 40px;"></small>
+                        </h1>
+                    </div>
+                    <div class="d-flex flex-column align-items-center py-3">
+                        <p>Small     (#10,000)</p>  
+                        <p>Medium     (#14,000)</p>
+                        <p>Big       (#18,000)</p>
+                    </div>
+                    <a href="https://wa.me/message/4PEH5J7XS35QP1" class="btn btn-success py-2 px-4">Place Order</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Pricing Plan End -->
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
