--- a/Fumigation.html
+++ b/Fumigation.html
@@ -179,7 +179,7 @@
     <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
-                <a href="ecstaticcleaners.com.ng"><h2 class="text-secondary mb-3"><span class="text-white">Ecstatic</span>Cleaners</h2></a>
+                <a href="ecstaticcleaners.com.ng" style="text-decoration: none;"><h2 class="text-white mb-3">Ecstatic<span class="" style="color: rgb(117, 224, 17);">Cleaner</span></h2></a>
                 <p>Follow us on: </p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://twitter.com/EcstaticStarch"><i class="fab fa-twitter"></i></a>
@@ -230,6 +230,8 @@
 			Designed by<a class="text-white font-weight-medium" href="https://www.YTDesigns.com"></a> YT Designs</p>
     </div>
     <!-- Footer End -->
+
+    
 <!-- Back to Top -->
 <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
