--- a/Price List.html
+++ b/Price List.html
@@ -119,7 +119,7 @@
             </div>
             <div class="modal-body">
                 <!-- Pickup Form -->
-                <form id="pickupForm" action="https://formsubmit.co/Ayodelu2@gmail.com" method="post" onsubmit="return validateForm()">
+                <form id="pickupForm" action="https://formsubmit.co/Ayodelu2@gmail.com" method="POST" onsubmit="return validateForm()">
                     <div class="form-group">
                         <label for="fullName">Full Name</label>
                         <input type="text" class="form-control" id="fullName" name="name" placeholder="Enter your full name" required>
