Commit all to heaven

--- a/Homepage.html
+++ b/Homepage.html
@@ -173,7 +173,7 @@
                         <a href="tel:+2348093039272, +2349044040270" style="text-decoration: none; color: white;">
                             <i class="fas fa-phone-alt fa-3x mb-3"></i>
                             <h5 class="font-weight-light">Call Us</h5>
-                            <p class="m-0">+234 809 303 9272, +234 904 404 0270</p>
+                            <p class="m-0">+234 809 303 9272</p>
                         </a>
                     </div>
                 </div>
@@ -399,13 +399,13 @@
                 <div class="testimonial-item">
                     <div class="bg-light text-center p-4 rounded">
                         <h5 class="font-weight-medium">Mr. Abiodun</h5>
-                        <p class="text-center font-italic">IT consultant</p>
+                        <p class="text-center font-italic">Career</p>
                         <p class="m-0">Ecstatic Cleaners has been a lifesaver for my laundry needs. Their attention to detail and care for my clothes are unparalleled. I trust them with my most delicate fabrics, and they always come back looking brand new. Highly recommended!</p>
                     </div>
                 </div>
                 <div class="testimonial-item">
                     <div class="bg-light text-center p-4 rounded">
-                        <h5 class="font-weight-medium">Easypedia Global Cleaning</h5>
+                        <h5 class="font-weight-medium">Easypedia Global</h5>
                         <p class="text-center font-italic">Business Owner</p>
                         <p class="m-0">As a business owner, maintaining a clean and welcoming environment for our clients is crucial. Ecstatic Cleaners has consistently delivered exceptional commercial cleaning services. Their professionalism and reliability have made them an invaluable partner in keeping our workspace pristine.</p>
                     </div>
@@ -413,7 +413,7 @@
                 <div class="testimonial-item">
                     <div class="bg-light text-center p-4 rounded">
                         <h5 class="font-weight-medium">Oluwaseyi .O</h5>
-                        <p class="text-center font-italic">Stylist</p>
+                        <p class="text-center font-italic">Career</p>
                         <p class="m-0">I've been using Ecstatic Cleaners for my laundry needs, and I couldn't be happier. Their prompt service, friendly staff, and impeccable attention to detail set them apart. My clothes have never looked better, and I appreciate their commitment to quality</p>
                     </div>
                 </div>
