--- a/Contact.html
+++ b/Contact.html
@@ -129,12 +129,13 @@
 </div>
 <!-- Contact End -->
 
+<!-- HTML form -->
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6 mb-4">
             <div class="contact-form">
                 <div id="success"></div>
-                <form name="sentMessage" id="contactForm" novalidate="novalidate" method="POST" action="https://formsubmit.co/Ayodelu4@gmail.com">
+                <form name="sentMessage" id="contactForm" novalidate="novalidate" method="POST" action="">
                     <div class="form-group">
                         <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" name="name" data-validation-required-message="Please enter your name" />
                         <p class="help-block text-danger"></p>
@@ -148,10 +149,10 @@
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" rows="6" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
+                        <textarea class="form-control" rows="6" id="message" placeholder="Message" name="message" required="required" data-validation-required-message="Please enter your message"></textarea>
                         <p class="help-block text-danger"></p>
                     </div>
-                    <button class="btn btn-outline-primary p-2 px-5" type="submit" id="sendMessageButton">Submit</button>
+                    <button class="btn btn-outline-primary p-2 px-5" type="submit" name="submit" id="sendMessageButton">Submit</button>
                 </form>
             </div>
         </div>
@@ -162,6 +163,8 @@
         </div>
     </div>
 </div>
+
+
 
 <!-- Contact End -->
 
@@ -226,20 +229,65 @@
     <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Contact Javascript File -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+   
 </body>
 
 </html>
+ <!-- JavaScript Libraries -->
+ <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+ <script src="lib/easing/easing.min.js"></script>
+ <script src="lib/waypoints/waypoints.min.js"></script>
+ <script src="lib/counterup/counterup.min.js"></script>
+ <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+ <!-- Contact Javascript File -->
+ <script src="mail/jqBootstrapValidation.min.js"></script>
+ <script src="mail/contact.js"></script>
+
+ <!-- Template Javascript -->
+ <script src="js/main.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+
+ 
+ <script>
+    function sendFormViaWhatsApp() {
+        var name = document.getElementById("name").value;
+        var email = document.getElementById("email").value;
+        var subject = document.getElementById("subject").value;
+        var message = document.getElementById("message").value;
+
+        // Generate the WhatsApp message with the form data and topic
+        var whatsappMessage = `*Prompt From Contact Form*\n\nName: ${name}\nEmail: ${email}\nSubject: ${subject}\nMessage: ${message}`;
+
+        // Encode the message as a URI component
+        var encodedMessage = encodeURIComponent(whatsappMessage);
+
+        // Replace with your WhatsApp number
+        var whatsappNumber = "+2348093039272"; // Your WhatsApp number
+
+        // Create the WhatsApp message link
+        var whatsappLink = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
+
+        // Open WhatsApp in a new tab/window
+        window.open(whatsappLink, "_blank");
+    }
+
+    // Function to reset the form after submission
+    function resetForm() {
+        document.getElementById("contactForm").reset();
+    }
+
+    // Attach the sendFormViaWhatsApp function to the form submission
+    document.getElementById("contactForm").addEventListener("submit", function (event) {
+        event.preventDefault(); // Prevent the default form submission
+        sendFormViaWhatsApp(); // Call the WhatsApp function
+        resetForm(); // Reset the form
+    });
+</script>
+
+
+
+
+
+
