--- a/Carpets and Rugs.html
+++ b/Carpets and Rugs.html
@@ -177,17 +177,24 @@
                 </div>
                 
                 <div class="col-lg-6">
-                    <form>
-                        <div class="mb-3">
-                            <input type="text" class="form-control" placeholder="Your Name">
+                    <form name="sentMessage" id="contactForm" novalidate="novalidate" method="POST" action="">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" name="name" data-validation-required-message="Please enter your name" />
+                            <p class="help-block text-danger"></p>
                         </div>
-                        <div class="mb-3">
-                            <input type="email" class="form-control" placeholder="Your Email">
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" name="email" data-validation-required-message="Please enter your email" />
+                            <p class="help-block text-danger"></p>
                         </div>
-                        <div class="mb-3">
-                            <textarea class="form-control" rows="5" placeholder="Your Message"></textarea>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="subject" placeholder="Subject" required="required" name="subject" data-validation-required-message="Please enter a subject" />
+                            <p class="help-block text-danger"></p>
                         </div>
-                        <button type="submit" class="btn btn-outline-primary btn-block w-50">Submit</button>
+                        <div class="form-group">
+                            <textarea class="form-control" rows="6" id="message" placeholder="Message" name="message" required="required" data-validation-required-message="Please enter your message"></textarea>
+                            <p class="help-block text-danger"></p>
+                        </div>
+                        <button class="btn btn-outline-primary p-2 px-5" type="submit" name="submit" id="sendMessageButton">Submit</button>
                     </form>
                 </div>
                 
@@ -290,3 +297,45 @@
 
  <!-- Template Javascript -->
  <script src="js/main.js"></script>
+
+ <script>
+    function sendFormViaWhatsApp() {
+        var name = document.getElementById("name").value;
+        var email = document.getElementById("email").value;
+        var subject = document.getElementById("subject").value;
+        var message = document.getElementById("message").value;
+
+        // Generate the WhatsApp message with the form data and topic
+        var whatsappMessage = `*Prompt From Carpet and Upholstery Services*\n\nName: ${name}\nEmail: ${email}\nSubject: ${subject}\nMessage: ${message}`;
+
+        // Encode the message as a URI component
+        var encodedMessage = encodeURIComponent(whatsappMessage);
+
+        // Replace with your WhatsApp number
+        var whatsappNumber = "+2348093039272"; // Your WhatsApp number
+
+        // Create the WhatsApp message link
+        var whatsappLink = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
+
+        // Open WhatsApp in a new tab/window
+        window.open(whatsappLink, "_blank");
+    }
+
+    // Function to reset the form after submission
+    function resetForm() {
+        document.getElementById("contactForm").reset();
+    }
+
+    // Attach the sendFormViaWhatsApp function to the form submission
+    document.getElementById("contactForm").addEventListener("submit", function (event) {
+        event.preventDefault(); // Prevent the default form submission
+        sendFormViaWhatsApp(); // Call the WhatsApp function
+        resetForm(); // Reset the form
+    });
+</script>
+
+
+
+
+
+
