--- a/Homepage.html
+++ b/Homepage.html
@@ -405,7 +405,7 @@
                 </div>
                 <div class="testimonial-item">
                     <div class="bg-light text-center p-4 rounded">
-                        <h5 class="font-weight-medium">Easypedia Global</h5>
+                        <h5 class="font-weight-medium">Akinyele Bliss</h5>
                         <p class="text-center font-italic">Business Owner</p>
                         <p class="m-0">As a business owner, maintaining a clean and welcoming environment for our clients is crucial. Ecstatic Cleaners has consistently delivered exceptional commercial cleaning services. Their professionalism and reliability have made them an invaluable partner in keeping our workspace pristine.</p>
                     </div>
@@ -419,7 +419,7 @@
                 </div>
                 <div class="testimonial-item">
                     <div class="bg-light text-center p-4 rounded">
-                        <h5 class="font-weight-medium">TheFather Chow</h5>
+                        <h5 class="font-weight-medium">Emmanuel .S</h5>
                         <p class="text-center font-italic">Business Owner</p>
                         <p class="m-0">Ecstatic Cleaners is hands down the best residential cleaning service I've ever used. Their team goes above and beyond to ensure every nook and cranny of my home is spotless. I've never seen my house this clean before. Thanks to Ecstatic Cleaners for making my life easier!</p>
                     </div>
