Background Overlay Completed

--- a/Dry Cleaning.html
+++ b/Dry Cleaning.html
@@ -169,7 +169,7 @@
             <a href="Price List.html" style="text-decoration: none;">
                 <div class="card image-card" style="background-image: url('Img/mediamodifier-JskqEILt-ds-unsplash.jpg'); background-position: center; background-size: 400px;">
                     <div class="card-body" style="margin-top: 150px;">
-                        <h3 class="card-title text-dark ">T-shirts and Vests</h3>
+                        <h3 class="card-title text-light ">T-shirts and Vests</h3>
                         <!-- <p class="card-text">Description of Service 1. Lorem ipsum dolor sit.</p> -->
                     </div>
                 </div>
