--- a/Dry Cleaning.html
+++ b/Dry Cleaning.html
@@ -194,8 +194,8 @@
 
 
  
-   <!-- Footer Start -->
-   <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
+  <!-- Footer Start -->
+  <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
     <div class="row pt-5">
         <div class="col-lg-3 col-md-6 mb-5">
             <a href="ecstaticcleaners.com.ng" style="text-decoration: none;"><h2 class="text-white mb-3">Ecstatic<span class="" style="color: rgb(117, 224, 17);">Cleaner</span></h2></a>
@@ -229,16 +229,14 @@
         
         <div class="col-lg-3 col-md-6 mb-5">
             <h4 class="text-white mb-4">Send us an E-mail.</h4>
-            <form action="">
+            <form id="contactForm">
                 <div class="form-group">
-                    <input type="text" class="form-control border-0" placeholder="Your Name" required="required" />
+                    <input type="text" class="form-control" id="name" placeholder="Your Name" required="required">
                 </div>
                 <div class="form-group">
-                    <input type="email" class="form-control border-0" placeholder="Your Email" required="required" />
+                    <input type="email" class="form-control" id="email" placeholder="Your Email" required="required">
                 </div>
-                <div>
-                    <button class="btn btn-lg btn-secondary btn-block border-0" type="submit"><a href="https://www.ecstaticcleaners.@gmail.com" style="text-decoration: none;" class="text-white">Submit Now</a></button>
-                </div>
+                <button type="submit" class="btn btn-secondary">Submit</button>
             </form>
         </div>
     </div>
@@ -287,3 +285,31 @@
 
  <!-- Template Javascript -->
  <script src="js/main.js"></script>
+
+ <script>
+    document.getElementById("contactForm").addEventListener("submit", function (e) {
+        e.preventDefault();
+        
+        // Get user input from the form
+        const name = document.getElementById("name").value;
+        const email = document.getElementById("email").value;
+
+        // Construct the WhatsApp message
+        const message = `Hi, my name is ${name}. My email is ${email}. I have a question.`;
+
+        // Encode the message for a WhatsApp URL
+        const encodedMessage = encodeURIComponent(message);
+
+        // Replace the phone number with the recipient's number
+        const phoneNumber = "+234 809 303 9272"; // Replace with your recipient's phone number
+
+        // Create the WhatsApp URL
+        const whatsappURL = `https://api.whatsapp.com/send?phone=${phoneNumber}&text=${encodedMessage}`;
+
+        // Open WhatsApp in a new tab
+        window.open(whatsappURL);
+
+        // Reset the form
+        document.getElementById("contactForm").reset();
+    });
+</script>
