--- a/About Us.html
+++ b/About Us.html
@@ -161,7 +161,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card h-100 text-center">
                     <div class="card-body">
-                        <div class="mb-4">
+                        <div class="mt-4">
                             <img src="Img/society.gif" alt="" srcset="" >
                         </div>
                         <h5 class="card-title mt-4">Experienced Team</h5>
@@ -172,7 +172,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card h-100 text-center">
                     <div class="card-body">
-                        <div class="mb-4">
+                        <div class="mt-4">
                             <img src="Img/recycling.gif" alt="" srcset="">
                         </div>
                         <h5 class="card-title mt-4">Eco-Friendly Cleaning</h5>
@@ -183,7 +183,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card h-100 text-center">
                     <div class="card-body">
-                        <div class="mb-4">
+                        <div class="mt-4">
                             <img src="Img/customer.gif" alt="" srcset="" >
                         </div>
                         <h5 class="card-title mt-4">Customer Satisfaction</h5>
