--- a/Contact.html
+++ b/Contact.html
@@ -303,7 +303,7 @@
         var encodedMessage = encodeURIComponent(whatsappMessage);
 
         // Replace with your WhatsApp number
-        var whatsappNumber = "+2348093039272"; // Your WhatsApp number
+        var whatsappNumber = "+234 901 069 2636"; // Your WhatsApp number
 
         // Create the WhatsApp message link
         var whatsappLink = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
