--- a/Fumigation.html
+++ b/Fumigation.html
@@ -198,7 +198,7 @@
         <div class="col-lg-3 col-md-6 mb-5">
             <h4 class="text-white mb-4">Get In Touch</h4>
             <p><i class="fa fa-map-marker-alt mr-2"></i>9, Akinwunmi street, Alagomeji, Yaba, Lagos</p>
-            <p><i class="fa fa-phone-alt mr-2"></i>+234 809 303 9272</p>
+            <p><i class="fa fa-phone-alt mr-2"></i>+234 901 069 2636</p>
             <p><i class="fa fa-envelope mr-2"></i>ecstaticcleaners@gmail.com</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
@@ -314,7 +314,7 @@
         var encodedMessage = encodeURIComponent(whatsappMessage);
 
         // Replace with your WhatsApp number
-        var whatsappNumber = "+2348093039272"; // Your WhatsApp number
+        var whatsappNumber = "+234 901 069 2636"; // Your WhatsApp number
 
         // Create the WhatsApp message link
         var whatsappLink = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
