--- a/Price List.html
+++ b/Price List.html
@@ -623,7 +623,7 @@
         const encodedMessage = encodeURIComponent(message);
 
         // Replace the phone number with the recipient's number
-        const phoneNumber = "+234 809 303 9272"; // Replace with your recipient's phone number
+        const phoneNumber = "++234 901 069 2636"; // Replace with your recipient's phone number
 
         // Create the WhatsApp URL
         const whatsappURL = `https://api.whatsapp.com/send?phone=${phoneNumber}&text=${encodedMessage}`;
